# SFMLSandbox

./: CMakeLists.txt  LICENSE  README.md
include/: BoutonDetails.h  Event.h  Game.h  Menu.h  Pause.h
src/: Game.cpp  Menu.cpp  Pause.cpp  main.cpp
